# DS5-NS2Pro-Dongle-Manager

./: .gitignore  LICENSE  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  appConfig.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_config.rs  commands.rs  hid.rs  lib.rs  main.rs  ns2pro_winusb.rs  serial_ns2pro.rs  state.rs
src/components/: AppFooter.tsx  AppHeader.tsx  ButtonMappingPanel.tsx  ConfigPanel.tsx  ControllerNotificationPopup.tsx  DeviceStrip.tsx  FirmwareUpdateDialog.tsx  SettingsView.tsx  SidebarDeviceCard.tsx  SoftwareSettingsDialog.tsx  SoftwareUpdateDialog.tsx  TrayPopup.tsx
src/components/config/: ControllerModeControl.tsx  FloatControl.tsx  IntegerControl.tsx  PollingRateControl.tsx  SwitchProgressDialog.tsx  ToggleControl.tsx
src/components/ui/: dialog.tsx  switch.tsx
src/hooks/: useDs5Bridge.ts
src/i18n/locales/: en.ts  zh.ts
src/lib/: firmwareRelease.ts  softwareRelease.ts
src/protocol/: buttonMapping.ts  config.ts  ds5BridgeHid.ts
src/styles/: animations.css  base.css  config.css  controller-notification-popup.css  device.css  fonts.css  footer.css  header.css  layout.css  responsive.css  settings.css  theme.css  tray-popup.css  update-dialogs.css
src/types/: webhid.d.ts
