[package]
name = "ds5_ns2pro_dongle_manager"
version = "1.0.0"
description = "A desktop manager for a Pico-based DS5 and NS2Pro dongle bridge."
authors = ["you"]
edition = "2021"
default-run = "ds5_ns2pro_dongle_manager"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ds5_ns2pro_dongle_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ds5_ns2pro_dongle_manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hidapi = "2"
rodio = { version = "0.19", features = ["wav"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Devices_Communication", "Win32_Devices_DeviceAndDriverInstallation", "Win32_Devices_Usb", "Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_UI_WindowsAndMessaging"] }
winreg = "0.55"
